updated swagger; Cadence Screen saves correctly to back end
